# qsl-dot-net

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE.txt  README.md  index.html  main.css  pyproject.toml  qsl-cards.html  reference.html  render_templates.py  satellites.html
.github/: .gitignore
.github/workflows/: main.yml
static/css/: main.css
static/js/: antenna-calculator.js
static/templates/: base.html  index.html  qsl-cards.html  reference.html  satellites.html
