[project]
name = "qsl-dot-net"
version = "0.1.0"
description = "QSL.net webpage for K6BCW"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["render_templates.py"]

